--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 </p>
      <div id="Portfolio">
   <h2> </h2>
-  <img src="IMAGENES\1.jpg" alt="logo">
+  <img src="IMAGENES\0.png" alt="logo">
   <p style="font-size: 30px;">
     In this section, you can see SOME of my published works, by clicking on them you can access the publication where they are located:
     </p>
