--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
       #Portfolio:target, #Contact:target, #Aboutus:target {
         display: block;
       }
+      /* Media query para dispositivos móviles */
+  @media only screen and (max-width: 600px) {
+    /* Estilos para hacer que los elementos se ajusten al tamaño de la pantalla */
+    body {
+      font-size: 16px;
+    }
+    
+    p {
+      font-size: 24px;
+    }
+    
+    .image-gallery img {
+      width: 100%;
+      height: auto;
     </style>
   </head>
   <body>
