--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </p>
      <div id="Portfolio">
   <h2> </h2>
-  <img src="C:\Users\luqui\OneDrive\Documentos\Pancho\web 2\IMAGENES\0.png" alt="logo de 5151phus">
+  <img src="IMAGENES\0.png" alt="logo de 5151phus""style="width: 1500px;">
   <p style="font-size: 30px;">
     In this section, you can see SOME of my published works, by clicking on them you can access the publication where they are located:
     </p>
