--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    @media only screen and (max-width: 600px) {
+  body {
+    text-align: center;
+  }
+  
+  .container {
+    width: 100%;
+    max-width: 600px; /* ajusta el valor según tus necesidades */
+    margin: 0 auto;
+  }
+  
+  .elemento {
+    display: block;
+    margin: 0 auto;
+  }
+}
     <meta charset="UTF-8">
-    <title>Texto de bienvenida</title>
+    <title>Portfolio 5151phus</title>
     <style>
       body {
         background-color: black;
@@ -22,7 +38,7 @@
   </head>
   <body>
     <div style="text-align:center;">
-      <pre style="font-size: 12px;">
+      <pre style="font-size: 8px;">
         .lddddddddddddddddd;      'dKk;.               'oddddddddddddddddo'      ;kKd,                                     .d0k:;xNMXc                                                                   
         cNMMMMMMMMMMMMMMMMK;    ,xNMMMWOc.             dMMMMMMMMMMMMMMMMMk.   .:OWMMMNk,                                    .dWWWMMMx.                                                                   
         dMMMMMMMMMMMMMMMMNl   ;okXMMMMMMWo            .OMMMMMMMMMMMMMMMMK;  .:dONMMMMMMX;                                    ,KMMMMNc                                                              ,:.   
@@ -105,7 +121,7 @@
 </p>
      <div id="Portfolio">
   <h2> </h2>
-  <img src="IMAGENES\0.png" alt="logo de 5151phus"style="width: 1000px;">
+  <img src="IMAGENES\0.png" alt="logo de 5151phus"style="width: 1300px;">
   <p style="font-size: 30px;">
     In this section, you can see SOME of my published works, by clicking on them you can access the publication where they are located:
     </p>
