--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <a href="https://www.instagram.com/p/Cqli5QsOZG9/"><img src="IMAGENES\3.jpg" alt="Image 3"style="width: 1500px;">
       <a href="https://www.instagram.com/p/Cqu1aKzufiF/"><img src="IMAGENES\5.png" alt="Image 5"style="width: 1500px;">
       <a href="https://www.instagram.com/p/Cqc04mZOxB-/"><img src="IMAGENES\6.jpg" alt="Image 6"style="width: 1500px;">
-      <a href="https://www.instagram.com/p/Cq0L5yiLdlj/"><img src="IMAGENES\7.png" alt="Image 7"style="width: 1500px;">
+      <a href="https://www.instagram.com/p/Cq0L5yiLdlj/"><img src="IMAGENES\7.png" alt="futsal db.png"style="width: 1500px;">
       <a href="https://www.instagram.com/p/CpLByi-rsG-/"><img src="IMAGENES\8.jpg" alt="Image 8"style="width: 1500px;">
       <a href="https://www.instagram.com/p/CpLByi-rsG-/"><img src="IMAGENES\9.jpg" alt="Image 9"style="width: 1500px;">
       <a href="https://www.instagram.com/p/Cqi-DVJOrq0/"><img src="IMAGENES\10.jpg" alt="Image 10"style="width: 1500px;">
